--- a/test.html
+++ b/test.html
@@ -509,9 +509,9 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./images/Ros_logo.svg.png" alt="" width="100" height="24">
+                    <img src="./images/Ros_logo.svg.png" alt="" width="100" height="24" style="user-select: none;">
                 </a>
-                <a class="navbar-brand" href="#">Dashboard</a>
+                <a class="navbar-brand" href="#" style="user-select: none;">Dashboard</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="navtoggler">
                     <span class="navbar-toggler-icon"></span>
