fixed the joystick drag issue(again)

--- a/test.html
+++ b/test.html
@@ -628,7 +628,7 @@
             </div>
         </nav>
         <div id="canvas" style="text-align: center;" class="container-md"></div>
-        <div><canvas id="map"></canvas></div>
+        <div class="container-md"><canvas id="map"></canvas></div>
     </body>
 </html>
 <!--
