--- a/test.html
+++ b/test.html
@@ -71,9 +71,12 @@
             var map_resolution = -1;
             var map_origin_x;
             var map_origin_y;
+            var map_origin_orientation;
             var mapMessage = -1;
             var posX = -1;
             var posY = -1;
+
+            var set_navigation = true;
         </script>
         <script type="text/javascript"> // opencv
             function updateMap(){
@@ -116,18 +119,40 @@
                     mouseDown = true;
                     startX = e.clientX - canvas.offsetLeft + window.scrollX;
                     startY = e.clientY - canvas.offsetTop + window.scrollY;
-                    //console.log(startX);
+                    //console.log("start point: (" + startX + ", " + startY + ")");
                 });
 
                 canvas.addEventListener('mousemove', function(e) {
                     if (mouseDown) {
-                        mouseX = e.clientX - canvas.offsetLeft;
-                        mouseY = e.clientY - canvas.offsetTop;
+                        var mouseX = e.clientX - canvas.offsetLeft + window.scrollX;
+                        var mouseY = e.clientY - canvas.offsetTop + window.scrollY;
+                        //console.log("current point: (" + mouseX + ", " + mouseY + ")");
                     }
                 });
 
                 canvas.addEventListener('mouseup', function(e) {
                     mouseDown = false;
+                    var mouseX = e.clientX - canvas.offsetLeft + window.scrollX;
+                    var mouseY = e.clientY - canvas.offsetTop + window.scrollY;
+                    //console.log("end point: (" + mouseX + ", " + mouseY + ")");
+
+                    if(map_resolution == -1) return;
+                    /*
+                    var current_pose_x = parseFloat(message.pose.pose.position.x);
+                    var current_pose_y = parseFloat(message.pose.pose.position.y);
+                    var map_x = (current_pose_x - map_origin_x) / map_resolution;
+                    var map_y = (current_pose_y - map_origin_y) / map_resolution;
+                    */
+                    var real_x = startX * map_resolution + map_origin_x; 
+                    var real_y = startY * map_resolution + map_origin_y;
+
+                    var orientation = Math.atan(-(mouseY - startY) / (mouseX - startX)) / Math.PI;
+                    if(mouseX < startX && mouseY <= startY) orientation += 1;
+                    else if(mouseX < startX && mouseY >= startY) orientation -= 1; 
+                    orientation *= -1;
+                    //console.log(orientation);
+                    
+                    set_goal(real_x, real_y, orientation);
                 });
 
             });
@@ -268,6 +293,7 @@
                 map_resolution = message.resolution;
                 map_origin_x = parseFloat(message.origin.position.x);
                 map_origin_y = parseFloat(message.origin.position.y);
+                map_origin_orientation = parseFloat(message.origin.orientation.z);
             });
             PoseListener.subscribe(function(message) {
                 //console.log(message);
@@ -279,6 +305,7 @@
                 //console.log("x: " + map_x + " y:" + map_y);
                 posX = map_x;
                 posY = map_y;
+                console.log(message.pose.pose.orientation.z);
                 updateMap();
             });
             addEventListener("orientationchange", function() {
@@ -293,30 +320,36 @@
                 actionName : 'move_base_msgs/MoveBaseAction'
             });
 
-            var positionVec3 = new ROSLIB.Vector3(null);
-            var orientation = new ROSLIB.Quaternion({x:0, y:0, z:0, w:1.0});
+            function set_goal(x, y, z){
+                cancelAllGoals();
 
-            positionVec3.x = 3.0;
-            positionVec3.y = 0.0;
+                var positionVec3 = new ROSLIB.Vector3(null);
+                var orientation = new ROSLIB.Quaternion({x:0, y:0, z:0, w:1.0});
 
-            var pose = new ROSLIB.Pose({
-                position : positionVec3,
-                orientation : orientation
-            });
+                positionVec3.x = x;
+                positionVec3.y = y;
+                orientation.z = z;
 
-            var goal = new ROSLIB.Goal({
-                actionClient : actionClient,
-                goalMessage : {
-                    target_pose : {
-                        header : {
-                            frame_id : '/map'
-                        },
-                        pose : pose
+                var pose = new ROSLIB.Pose({
+                    position : positionVec3,
+                    orientation : orientation
+                });
+
+                var goal = new ROSLIB.Goal({
+                    actionClient : actionClient,
+                    goalMessage : {
+                        target_pose : {
+                            header : {
+                                frame_id : 'map'
+                            },
+                            pose : pose
+                        }
                     }
-                }
-            });
-        </script>
+                });
 
+                goal.send();
+            }
+        </script>
         <script type="text/javascript" defer> // UI
             var prex, prey, preax, preay, preaz;
             prex = prey = preax = preay = preaz = -1;
@@ -658,11 +691,7 @@
                 </div>
             </div>
         </nav>
-        <div id="canvas" style="text-align: center;" class="container-md"></div>
-        <div class="container-md"><canvas id="map"></canvas></div>
+        <div id="canvas" class="container-md text-center"></div>
+        <div class="container-md text-center"><canvas id="map"></canvas></div>
     </body>
 </html>
-<!--
-    amcl_pose(geometry_msgs/PoseWithCovarianceStamped)
-    map_metadata（nav_msgs / MapMetaData）
--->
